# skillrt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  llms.txt
.github/workflows/: ci.yml  claude.yml
comms/: __init__.py  test_writer.py  writer.py
docs/: architecture.md  comms-log-integration.md
docs/dogfood/: 001-clipboard-skill.md
examples/: prose-uk-train-times.md  structured-pr-review.md
rfc/: 0001-namespaced-prose-skills.md
skills/bob-clipboard-for-paste-commands/: SKILL.md
spec/: SKILL-SPEC.md  frontmatter.schema.json
src/: error.rs  frontmatter.rs  lib.rs  main.rs  parser.rs  registry.rs  runtime.rs  skill.rs
