[package]
name = "skillrt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Jake Joyner <jakejoyner@users.noreply.github.com>"]
license = "MIT"
description = "A runtime and spec for executable markdown skills consumed by AI agents."
repository = "https://github.com/jakejjoyner/skillrt"
homepage = "https://github.com/jakejjoyner/skillrt"
readme = "README.md"
keywords = ["ai", "agent", "markdown", "skill", "llm"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    ".gitignore",
    "CLAUDE.md",
]

[[bin]]
name = "skill"
path = "src/main.rs"

[lib]
name = "skillrt"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
pulldown-cmark = "0.10"
semver = { version = "1", features = ["serde"] }
url = "2"
walkdir = "2"
directories = "5"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
